XML_Interpreter/src/main/kotlin/grammar/XQLParser.g4
parser grammar XQLParser;

options { tokenVocab=XQLLexer; }

program: statement* EOF;

statement
    : load
    | assignment
    | save
    ;

load: LOAD expr TO ID;

assignment: ID EQUALS expr;

save: SAVE ID TO expr;

expr
    : path
    | countExpr
    | mapExpr
    | aggregateExpr
    | literal
    | xmlTemplate
    ;

path: ID (pathStep)*;

pathStep
    : DOT ID
    | LEFT_BRACKET NUMBER RIGHT_BRACKET
    | AT ID
    ;

countExpr: path HASH;

mapExpr: path ARROW ID;

aggregateExpr: path ARROW ID PLUSPLUS;

literal
    : STRING
    | NUMBER
    ;

xmlTemplate: XML_TEMPLATE;
